--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "dotenv": "^16.4.5",
+    "file-type": "^19.0.0",
+    "got": "^14.2.1",
     "ora": "^8.0.1"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.5",
+    "@types/got": "^9.6.12",
     "@types/node": "^20.11.30",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
