--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@aws-sdk/client-s3": "^3.540.0",
     "@commander-js/extra-typings": "^12.0.1",
     "@inquirer/prompts": "^4.3.0",
-    "@metaplex-foundation/mpl-core": "^0.2.0",
+    "@metaplex-foundation/mpl-core": "^1.1.1",
     "@metaplex-foundation/mpl-toolbox": "^0.9.4",
-    "@metaplex-foundation/umi": "^0.9.1",
-    "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
-    "@metaplex-foundation/umi-uploader-aws": "^0.9.1",
-    "@metaplex-foundation/umi-uploader-irys": "^0.9.1",
-    "@metaplex-foundation/umi-uploader-nft-storage": "^0.9.1",
-    "@solana/spl-token": "^0.4.3",
-    "@solana/web3.js": "^1.91.1",
+    "@metaplex-foundation/umi": "^0.9.2",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@metaplex-foundation/umi-uploader-aws": "^0.9.2",
+    "@metaplex-foundation/umi-uploader-irys": "^0.10.0-beta.0",
+    "@metaplex-foundation/umi-uploader-nft-storage": "^0.9.2",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/web3.js": "^1.95.4",
     "bignumber.js": "^9.1.2",
     "bn.js": "^5.2.1",
     "bs58": "^5.0.0",
