--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@metaplex-foundation/umi-uploader-aws": "^0.9.2",
     "@metaplex-foundation/umi-uploader-irys": "^0.10.0-beta.0",
     "@metaplex-foundation/umi-uploader-nft-storage": "^0.9.2",
+    "@shadow-drive/sdk": "^6.0.0",
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.95.4",
     "bignumber.js": "^9.1.2",
